--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{% block title %}EventFlow{% endblock %}</title>
         {% block stylesheets %}
-
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="{{ asset('css/app-theme.css') }}">
         {% endblock %}
-
-
     </head>
     <body>
         {% block header %}
             {% include 'partials/_header.html.twig' %}
         {% endblock %}
 
-        {% block body %}
-        
-        {% endblock %}
-
-        {% block javascripts %}
-        
-        {% endblock %}
+        <main class="page-content">
+            {% block body %}{% endblock %}
+        </main>
 
         {% block footer %}
             {% include 'partials/_footer.html.twig' %}
         {% endblock %}
 
+        {% block javascripts %}{% endblock %}
     </body>
 </html>
