--- a/templates/security/inscription.html.twig
+++ b/templates/security/inscription.html.twig
@@ -1,13 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block title %}Inscription{% endblock %}
 
-{% block stylesheets %}
-
-{% endblock %}
-
 {% block body %}
-<div class="auth-wrap">
-  <div class="card">
+<div class="auth-page">
+  <div class="auth-card">
     <h2>Créer un compte</h2>
 
     {% for m in app.flashes('error') %}
